--- a/src/index.css
+++ b/src/index.css
@@ -18,11 +18,7 @@ nav {
 
 .movies {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-auto-rows: 1fr;
-  gap: 10px;  
-}
-
-.movie {
-  padding: 1rem;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  /* grid-auto-rows: 1fr; */
+  gap: 1rem;  
 }
